<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".LocationsActivity">

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".4"
        android:layout_marginBottom="20dp"
        android:name="com.google.android.gms.maps.MapFragment" />

    <ImageView
        android:id="@+id/staticMap"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".4"
        android:layout_marginBottom="20dp"
        android:src="@drawable/staticmap_america"
        android:visibility="gone"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight=".25"
            android:layout_height="wrap_content"
            android:textColor="@color/orange"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:text="@string/name_column" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight=".45"
            android:layout_height="wrap_content"
            android:textColor="@color/orange"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:text="@string/address_column" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight=".3"
            android:layout_height="wrap_content"
            android:textColor="@color/orange"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:text="@string/distance_column" />
    </LinearLayout>

    <ListView
        android:id="@+id/locationsList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".6" />

</LinearLayout>
