<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <fragment
        android:id="@+id/detailsMap"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".3"
        android:layout_marginBottom="10dp"
        android:name="com.google.android.gms.maps.MapFragment" />

    <ImageView
        android:id="@+id/detailsStaticMap"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".4"
        android:layout_marginBottom="20dp"
        android:visibility="gone"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".7">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/callButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".4"
                android:background="@color/orange"
                android:text="@string/call_button"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:gravity="center"
                android:padding="5dp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".2" />

            <TextView
                android:id="@+id/directionsButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".4"
                android:background="@color/orange"
                android:text="@string/directions_button"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:gravity="center"
                android:padding="5dp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/officeImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:text="@string/name_column"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:textSize="20sp"
                android:gravity="center" />

            <TextView
                android:id="@+id/locationName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:textSize="20sp"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:text="@string/address_column"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:textSize="20sp"
                android:gravity="center" />

            <TextView
                android:id="@+id/locationAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:textSize="20sp"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:text="@string/distance_column"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:textSize="20sp"
                android:gravity="center" />

            <TextView
                android:id="@+id/locationDistance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:textSize="20sp"
                android:gravity="center" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
